crates/tests/fixtures/harness/data/error/writer_missing_enum_type/input.rdl
#[win32]
mod Test {
    #[Defs::SupportedPlatform(X86)]
    struct A { x: u8, }
}
